test/parse/expr/bad-localset-name.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module (func
  (local $n i32)
  i32.const 0
  local.set n))
(;; STDERR ;;;
out/test/parse/expr/bad-localset-name.txt:6:13: error: unexpected token "n", expected a numeric index or a name (e.g. 12 or $foo).
  local.set n))
            ^
;;; STDERR ;;)
